2008-02-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm:  Include entry point PS_path in the terminal tables
	for epslatex, pslatex, and pstex.  This fixes a bug due to the code in
	color.c:draw_inside_color_smooth_box_postscript() not being able to sync
	with the code in the terminal driver.

2008-02-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/gp_types.h src/graph3d.c src/plot2d.c src/tables.c 
	src/graphics.c (plot_circles): New plot style 'plot ... with circles'.

	* docs/gnuplot.doc docs/plotstyles.gnu:
	Documentation for 'plot ... with circles'

2008-02-22  Ralf Juengling

	* demo/circles.dem demo/delaunay-edges.dat demo/empty-circles.dat
	demo/optimize.dat demo/lena.rgb demo/lena-keypoints.bin:
	Demo script and associated data files for 'plot ... with circles'.

2008-02-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/term.c (do_arc):  New terminal-independent routine
	to draw all or part of a circle, possibly filled.  Terminal-specific
	versions can be added later if desirable, with this one serving as a 
	default fallback for terminals with no private routine.

	* src/set.c (set_object) src/show.c src/save.h src/save.c src/gadgets.h:
	Generalize all the support routines for "set obj rectangle" to handle
	circles and ellipses also.

	* src/graphics.h src/graphics.c(place_objects do_ellipse) src/graph3d.c
	demo/ellipse.dem docs/gnuplot.doc:  Implement, document, and demonstrate
	"set obj {circle|ellipse}".

2008-02-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_arrows3d): Save/restore the clipping area so
	that splot doesn't trash the current clipping state.  Bugfix.

	* src/graphics.c (boundary): Reset the default clipping area to the
	plot boundary at the start of every 'plot' command.  This should not
	be necessary, but it provides protection against a hypothetical instance
	of int_error() in the middle of a save/draw/restore sequence.
